--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "big.js": "^6.2.1",
+    "msw": "^0.47.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-external-link": "^2.0.0",
